# ansible-collection

./: .ansible-lint  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.md  MAINTAINERS  Makefile  README.md  codecov.yml  galaxy.yml  pyproject.toml  pyrightconfig.json  renovate.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_report.yml  feature_request.yml
.github/workflows/: ansible-test-integration.yml  ansible-test-sanity.yml  ansible-test-unit.yml  ansible-test.yml  extra-docs-linting.yml  lint.yml  psf-black.yml  publish-galaxy.yml  pull-request-integration.yml  pull-request-sanity.yml  pull-request-units.yml  ruff.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 10-add-many-more-modules.yaml  100-bump-kubernetes-version.yml  104-ansible-lint.yml  11-integration-tests-on-main.yaml  133-kubernetes-slug.yml  135-ansible-version.yml  144-issue-templates.yml  147-integration-testing-kubernetes-version.yml  18-devcontainer.yaml  180-add-action_groups.yml  20-update-codeowners.yaml  22-integration-tests-on-main.yaml  229-bump-python-311.yaml  229-disable-monitoring-alert-policy-and-one-click-int-tests.yml  229-droplet-id-absent.yaml  23-update-python-deps.yaml  233-bump-aiohttp-3.10.2.yml  233-bump-certifi-2024.7.4.yml  233-bump-cryptography-43.0.1.yml  233-reserved-ip-assign.yml  236-droplet-resize.yml  239-fix-droplet-resize-new-droplets.yml  241-redis-to-valkey.yml  245-add-more-droplet-tests.yaml  250-droplet-unique-name.yml  250-error-message-consistency.yml  27-releasing-instructions.yml  36-run-integration-on-fork-prs.yaml  42-pr-integration-on-deps.yml  44-client-and-module-override-options.yml  46-add-makefile-test-commands.yaml  53-add-makefile-test-commands.yaml  57-dependabot-bumps.yml  58-publish-galaxy.yaml  59-fix-database-cluster.yaml  59-readme-badges.yaml  60-fix-database-cluster.yaml  61-fix-project.yaml  62-fix-kubernetes-cluster.yaml  66-database-cluster-timeout.yaml  (+9 more)
docs/docsite/: links.yml
inventory/: digitalocean.yml
meta/: runtime.yml
playbooks/: account_info.yml  balance_info.yml  billing_history_info.yml  cdn_endpoints_info.yml  droplet.yml  moltbot.yml  moltbot_docker.yml  project_resources.yml
plugins/doc_fragments/: common.py
plugins/inventory/: droplets.py
plugins/module_utils/: common.py  droplet_resize.py  spaces.py
plugins/modules/: account_info.py  actions_info.py  app.py  apps_info.py  balance_info.py  billing_history_info.py  byoip_prefix.py  byoip_prefixes_info.py  cdn_endpoints.py  cdn_endpoints_info.py  certificate.py  certificates_info.py  container_registry.py  container_registry_info.py  database_backups_info.py  database_cluster.py  database_clusters_info.py  database_config.py  database_config_info.py  database_connection_pool.py  database_connection_pools_info.py  database_db.py  database_dbs_info.py  database_firewall.py  database_firewall_rules_info.py  database_maintenance_window.py  database_replica.py  database_replicas_info.py  database_user.py  database_users_info.py  domain.py  domain_record.py  domain_records_info.py  domains_info.py  droplet.py  droplet_action.py  droplet_action_power.py  droplet_action_power_off.py  droplet_action_power_on.py  droplet_action_resize.py  (+72 more)
tests/: run-integration.sh  run-sanity.sh  run-units.sh
tests/integration/: .gitignore  integration_config.yml.template  requirements.txt
tests/integration/targets/account_info/tasks/: main.yml
tests/integration/targets/actions_info/tasks/: main.yml
tests/integration/targets/app/defaults/: main.yml
tests/integration/targets/app/tasks/: 01_create_update_delete.yml  main.yml
tests/integration/targets/apps_info/tasks/: main.yml
tests/integration/targets/space/: aliases
tests/unit/: requirements.txt
tests/unit/plugins/inventory/: test_droplets.py
tests/unit/plugins/module_utils/: test_droplet_resize.py
tests/unit/plugins/modules/: test_droplet.py  test_droplet_action_power.py  test_droplet_action_resize.py  test_droplet_action_snapshot.py  test_monitoring_alert_policy.py  test_project_resources.py  test_reserved_ip_assign.py  test_ssh_key.py  test_tag.py
tests/utils/: render.sh
(+334 files in other folders)
